# message

./: .appveyor.yml  .travis.yml  CMakeCPack.cmake  CMakeLists.txt  LICENSE  README.md  default.nix
.scripts/: install.bat  install_deps.sh
cmake/: messageConfig.cmake.in
src/: CMakeLists.txt  Message.cpp  Message.hpp
tests/: CMakeLists.txt
tests/use_target/: CMakeLists.txt
